--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@nx/angular": "20.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
@@ -24,13 +25,15 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.3.0",
+    "@module-federation/enhanced": "0.7.6",
     "@nx/cypress": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
     "@nx/jest": "20.3.0",
     "@nx/js": "20.3.0",
+    "@nx/module-federation": "20.3.0",
     "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
@@ -40,6 +43,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.13.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -48,7 +52,9 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.3.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
